@@ -92,12 +92,9 @@ public class PartitionRunner {
 		if (myTransactionService != null) {
 			// Wrap each Callable task in an invocation to HapiTransactionService#execute
 			runnableTasks = runnableTasks.stream()
-					.map(t -> (Callable<Void>) () -> {
-						return myTransactionService
-								.withRequest(myRequestDetails)
-								.execute(t);
-					})
-					.collect(Collectors.toList());
+					.map(t -> (Callable<Void>) () ->
+							myTransactionService.withRequest(myRequestDetails).execute(t))
+					.toList();
 		}
 
 		if (runnableTasks.size() == 1) {
@@ -114,9 +111,8 @@ public class PartitionRunner {
 
 		ExecutorService executorService = buildExecutor(runnableTasks.size());
 		try {
-			List<Future<?>> futures = runnableTasks.stream()
-					.map(t -> executorService.submit(() -> t.call()))
-					.collect(Collectors.toList());
+			List<Future<?>> futures =
+					runnableTasks.stream().map(executorService::submit).collect(Collectors.toList());
 			// wait for all the threads to finish
 			for (Future<?> future : futures) {
 				future.get();
@@ -135,7 +131,7 @@ public class PartitionRunner {
 	private <T> List<Callable<Void>> buildCallableTasks(List<T> theResourceIds, Consumer<List<T>> partitionConsumer) {
 		List<Callable<Void>> retval = new ArrayList<>();
 
-		if (myBatchSize > theResourceIds.size()) {
+		if (theResourceIds.size() > myBatchSize) {
 			ourLog.info("Splitting batch job of {} entries into chunks of {}", theResourceIds.size(), myBatchSize);
 		} else {
 			ourLog.info("Creating batch job of {} entries", theResourceIds.size());
